<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPS Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_tracking_start">Start Tracking</string>
    <string name="action_tracking_pause">Pause Tracking</string>
    <string name="action_tracking_stop">Stop Tracking</string>
    <string name="action_tracking_add">New Tracking</string>
    <string name="action_map">View Map</string>
    <string name="action_tracking_list">View Tracking list</string>
    <string name="action_tracking_prefs">View Tracking Settings</string>
    <string name="action_help">Help</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="preferences">Preferences</string>
    
    <string name="urgencySettingsText">Please configure the urgency settings in the settings dialog.</string>
    <string name="urgencyCall">Call Help</string>
    
    <string name="tracking_new">New Tracking</string>
    <string name="editText_tracking_name">Tracking Name</string>
    <string name="tracking_intervall">Tracking Intervall</string>
    <string name="sms_receivers">SMS Receivers</string>
    <string name="tracking_sms_receiver_1_title"></string>
    <string name="tracking_sms_receiver_2_title"></string>
    <string name="tracking_sms_receiver_3_title"></string>
    <string name="tracking_notificatin_activate">Activate Notification</string>
    <string name="saveButtonText">Save</string>
    <string name="sendSMSButtonText">Send Password SMS</string>
    
    
    <string name="pref_urgency_settings_title">Urgency Settings</string>
    <string name="pref_urgency_phonecall_receiver_title">Phonecall Receiver</string>
    <string name="pref_urgency_sms_receiver1_title">GPS sms notification receiver 1</string>
    <string name="pref_urgency_sms_receiver2_title">GPS sms notification receiver 2</string>
    <string name="pref_urgency_sms_receiver3_title">GPS sms notification receiver 3</string>
    <string name="pref_tracking_settings_title">Tracking Settings</string>
    <string name="pref_tracking_name_title">Name</string>
    <string name="pref_gps_intervall_title">Intervall</string>
    <string name="pref_tracking_sms_receiver1_title">GPS sms notification receiver 1</string>
    <string name="pref_tracking_sms_receiver2_title">GPS sms notification receiver 2</string>
    <string name="pref_tracking_sms_receiver3_title">GPS sms notification receiver 3</string>
    <string name="pref_tracking_activate_notification_summary">Sends SMS to notification receifers in the chosen intervall.</string>
    <string name="pref_tracking_activate_notification_title">Activate Notification</string>
    <string name="pref_lock_settings">Screen lock Setting</string>
    <string name="pref_lock_settings_summary">When you set a password for the lock function, you can lock the menu with the corresponding menu entry (Lock). Only the "Call help" button remains active. To unlock the menu, click on the lock symbol in the menu bar and enter your password which you define here.</string>
    <string name="pref_title_lock_pwd">Lock Password</string>
    <string name="pref_title_lock_pwd_retype">Retype Lock Password</string>
    
    <string name="lock_Introduction_text">Bitte setzten Sie erst das Passwort zum entsperren in den Einstellungen.</string>
    
    <string name="unlock_Introduction_text">Bitte geben Sie das Passwort zum entsperren ein.</string>
    <string name="unlock_password_label">Passwort</string>
    <string name="unlock_error_text">Das eingegebene Passwort ist nicht korrekt.</string>
    <string name="password_sms_send_text">Das Password wurde per SMS verschickt.</string>
    
    <string name="help_title_1">"Call-Help" Funktion</string>
    <string name="help_title_2">Lock/Unlock Funktion</string>
    <string name="help_title_3">Neues Tracking starten</string>
    <string name="help_title_4">Tracking pausieren, stoppen</string>
    <string name="help_title_5">Trackingliste</string>
    <string name="help_title_6">Karte anzeigen</string>

    <string name="help_txt_1">Bevor die Funktion "Call Help" gestartet werden kann, muss in den Einstellungen
        					  eine Notfallnummer und eine Notfall-SMS-Nummer eingegeben werden.
        					  Anschliessend ist die Funktion "Call Help" verfügbar. Wird diese aktiviert,
        					  wird sofort ein Anruf zur gesicherten Notfall-Nummer getätigt. Zusätzlich wird eine SMS
        					  an die Notfall-SMS-Nummer mit den aktuellen Koordinaten versendet.</string>
    <string name="help_txt_2">Die Lock Funktion deaktiviert alle Funktionen der App, ausser der "Call Help"-
        					  Funktion. Dafür muss zuerst ein Passwort vergeben werden, um den Lock wieder aufzuheben.
        					  Sobald Lock aktiviert wurde, ist nur noch die "Call-Help"-Funktion verfügbar.
        					  Mittels der Unlock-Funktion im Menü, kann der Lock wieder aufgehoben werden. Dafür muss aber das
        					  definierte Passwort eingegeben werden.</string>
    <string name="help_txt_3">Ein neues Tracking wird über den Menüeintrag "New Tracking" ausgelöst. Vor dem Start kann ein 
        					  individueller Name vergeben werden, das Intervall in dem die Koordinaten gesichert werden sollen und
        					  ,wenn gewünscht, die SMS-Empfänger. ACHTUNG: Je nach Anbieter können zusätzliche Kosten für
        					  das versenden von SMS entstehen.</string>
    <string name="help_txt_4">Ein aktives Tracking kann im Menü mittels der Pause-Taste pausiert, wieder aufgenommen und gestoppt werden.</string>
    <string name="help_txt_5">Unter "Trackingliste" werden alle gesicherten Trackings aufgelistet. Diese können gelöscht werden oder über den Knopf in
        					  der Karte eingesehen werden.</string>
    <string name="help_txt_6">Die Karte zeigt eine gesicherte Trackingroute an, die in der Trackingliste ausgelesen wurde. Wird
        					  die Karte direkt aufgerufen, wird der aktuelle Standort angezeigt.</string>
    
</resources>
