<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/pref_urgency_settings_title"
        android:key="pref_key_urgency_settings">
        <EditTextPreference
            android:key="pref_key_urgency_phonecall_receiver"
            android:title="@string/pref_urgency_phonecall_receiver_title"
            android:inputType="phone"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_key_urgency_sms_receiver1"
            android:title="@string/pref_urgency_sms_receiver1_title"
            android:inputType="phone"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_key_urgency_sms_receiver2"
            android:title="@string/pref_urgency_sms_receiver2_title"
            android:inputType="phone"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_key_urgency_sms_receiver3"
            android:title="@string/pref_urgency_sms_receiver3_title"
            android:inputType="phone"
            android:defaultValue="" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/pref_tracking_settings_title"
        android:key="pref_key_tracking_settings">
        <EditTextPreference
            android:key="pref_key_tracking_name"
            android:title="@string/pref_tracking_name_title"
            android:defaultValue="" />
        <ListPreference 
            android:key="pref_key_gps_intervall"
            android:title="@string/pref_gps_intervall_title"
            android:entries="@array/minutes_intervall_array"
            android:entryValues="@array/minutes_intervall_array" />
        <EditTextPreference
            android:key="pref_key_tracking_sms_receiver1"
            android:title="@string/pref_tracking_sms_receiver1_title"
            android:inputType="phone"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_key_tracking_sms_receiver2"
            android:title="@string/pref_tracking_sms_receiver2_title"
            android:inputType="phone"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_key_tracking_sms_receiver3"
            android:title="@string/pref_tracking_sms_receiver3_title"
            android:inputType="phone"
            android:defaultValue="" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_key_tracking_activate_notification"
            android:summary="@string/pref_tracking_activate_notification_summary"
            android:title="@string/pref_tracking_activate_notification_title" />
        <SwitchPreference 
            android:defaultValue="false"
            android:key="pref_key_tracking_active"/>
        <SwitchPreference 
            android:defaultValue="false"
            android:key="pref_key_tracking_play"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_lock_settings"
        android:key="pref_key_lock_settings"
        android:summary="@string/pref_lock_settings_summary">
        <EditTextPreference
            android:key="pref_key_lock_pwd"
            android:title="@string/pref_title_lock_pwd"
            android:defaultValue="" />
        </PreferenceCategory>
</PreferenceScreen>
