<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/action_tracking_start"
	      android:icon="@drawable/ic_action_play"
	      android:title="@string/action_tracking_start"
	      android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_tracking_pause"
	      android:icon="@drawable/ic_action_pause"
	      android:title="@string/action_tracking_pause"
	      android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_tracking_stop"
	      android:icon="@drawable/ic_action_stop"
	      android:title="@string/action_tracking_stop"
	      android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_tracking_add"
	      android:icon="@drawable/ic_action_new"
	      android:title="@string/action_tracking_add"
	      android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_map"
	      android:icon="@drawable/ic_action_map"
	      android:title="@string/action_map"
	      android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_tracking_list"
	      android:icon="@drawable/ic_drawer"
	      android:title="@string/action_tracking_list"
	      android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_lock"
	      android:icon="@drawable/ic_action_secure"
	      android:title="@string/action_lock"
	      android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_unlock"
	      android:icon="@drawable/ic_action_secure"
	      android:title="@string/action_unlock"
	      android:showAsAction="ifRoom"/>
	<item android:id="@+id/action_settings"
          android:title="@string/preferences"
          android:showAsAction="never"/>
	<item android:id="@+id/action_help"
	      android:icon="@drawable/ic_action_help"
	      android:title="@string/action_help"
	      android:showAsAction="ifRoom"/>
</menu> 
