<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ffhs.esa.arm.gpstracker.TrackingNewActivity" >

    <TextView
        android:id="@+id/tracking_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracking_new" />

    <EditText
        android:id="@+id/editText_tracking_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tracking_new"
        android:layout_below="@+id/tracking_new"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:hint="@string/editText_tracking_name"
        android:text="" />

    <TextView
        android:id="@+id/tracking_intervall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tracking_new"
        android:layout_below="@+id/editText_tracking_name"
        android:layout_marginTop="15dp"
        android:text="@string/tracking_intervall"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/intervall_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_tracking_name"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@+id/tracking_intervall"
        android:entries="@array/minutes_intervall_array" 
        android:entryValues="@array/minutes_intervall_array" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tracking_new"
        android:layout_below="@+id/intervall_selector"
        android:layout_marginTop="15dp"
        android:text="@string/sms_receivers"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText_sms_receiver_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tracking_new"
        android:layout_alignRight="@+id/intervall_selector"
        android:layout_below="@+id/textView1"
        android:inputType="phone"
        android:text="@string/tracking_sms_receiver_1_title" />
    
    <EditText
        android:id="@+id/editText_sms_receiver_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tracking_new"
        android:layout_alignRight="@+id/editText_sms_receiver_1"
        android:layout_below="@+id/editText_sms_receiver_1"
        android:inputType="phone"
        android:text="@string/tracking_sms_receiver_2_title" />
    
    <EditText
        android:id="@+id/editText_sms_receiver_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tracking_new"
        android:layout_alignRight="@+id/editText_sms_receiver_2"
        android:layout_below="@+id/editText_sms_receiver_2"
        android:inputType="phone"
        android:text="@string/tracking_sms_receiver_3_title" 
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Switch
        android:id="@+id/tracking_notification_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_sms_receiver_3"
        android:layout_marginTop="15dp"
        android:text="@string/tracking_notificatin_activate" />
    
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tracking_new"
        android:layout_below="@+id/tracking_notification_activate"
        android:onClick="save"
        android:text="@string/saveButtonText" />

</RelativeLayout>