<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ffhs.esa.arm.gpstracker.UnlockActivity" >

    <TextView
        android:id="@+id/password_sms_send_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_sms_send_text" />
    
    <TextView
        android:id="@+id/unlock_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlock_error_text" />
    
    <TextView
        android:id="@+id/unlock_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/unlock_error_text"
        android:text="@string/unlock_Introduction_text" />

    <TextView
        android:id="@+id/unlock_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_below="@id/unlock_message_text"
        android:layout_marginTop="15dp"
        android:text="@string/unlock_password_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/unlock_message_text"
        android:layout_below="@id/unlock_message_text"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:text="" />

    <Button
        android:id="@+id/unlock_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/unlock_message_text"
        android:layout_below="@id/editText_password"
        android:onClick="enterPassword"
        android:text="@string/saveButtonText" />
    
    <Button
        android:id="@+id/send_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_password"
        android:layout_toRightOf="@id/unlock_save_button"
        android:onClick="sendPasswordSMS"
        android:text="@string/sendSMSButtonText" />

</RelativeLayout>